Make a new bib joiner, slight edits of current ones

--- a/publications/bib/ChiarcosLOD.bib
+++ b/publications/bib/ChiarcosLOD.bib
@@ -1,9 +1,9 @@
-@incollection{ChiarcosLOD,
-  Author    = {Christian Chiarcos and Steven Moran and Pablo N. Mendes and Sebastian Nordhoff and Richard Littauer},
-  Year      = {to appear},
-  Title     = {Building a Linked Open Data Cloud of Linguistic Resources: Motivations and Developments},
+@InCollection{chiarcos2013building,
+  title={Building a Linked Open Data cloud of linguistic resources: Motivations and developments},
+  author={Chiarcos, Christian and Moran, Steven and Mendes, Pablo N and Nordhoff, Sebastian and Littauer, Richard},
+  Booktitle ={The People’s Web Meets NLP: Collaboratively Constructed Language Resources},
   Editor    = {Iryna Gurevych and Jungi Kim},
-  Booktitle = {The People's Web Meets NLP: Collaboratively Constructed Language Resources},
-  Publisher = {Springer},
+  pages={315--348},
+  year={2013},
+  publisher={Springer}
 }
-
