--- a/publications/bib/LittDebut.bib
+++ b/publications/bib/LittDebut.bib
@@ -2,10 +2,9 @@
 	Author    = {Richard Littauer},
 	Journal   = {Début: The Undergraduate Journal of Languages, Linguistics, and Area Studies},
 	Title     = {Replicating Oliphant's Saussurean Simulations},
-  Year      = {to appear},
+  Year      = {2012},
   Volume    = {3},
   Number    = {1},
   Editor    = {John Canning},
   URL       = {http://www.llas.ac.uk/news/3088},
 }
-
