--- a/publications/bib/LittLinguist.bib
+++ b/publications/bib/LittLinguist.bib
@@ -1,4 +1,4 @@
-@article{LittLinguist,
+@article{LittLinguist2012,
   Author    = {Richard Littauer},
   Title     = {Review of Harold F. Shiffman and Brian Spooner (Eds.), (2011). Language Policy and Language Conflict in Afghanistan and Its Neighbors. In: Brill's Studies in South and Southwest Asian Languages. Leiden: Brill.},
   Journal = {LINGUIST List},
@@ -6,4 +6,3 @@
   Volume    = {23.3813},
   URL       = {http://linguistlist.org/pubs/reviews/get-review.cfm?SubID=4553348},
 }
-
