--- a/publications/bib/publications.bib
+++ b/publications/bib/publications.bib
@@ -1,272 +1,283 @@
-# TODO  - make files for each of these
+@inproceedings{CCURL,
+ address = {Portoro\v{z}, Slovenia},
+ author = {Littauer, Richard and Paterson, Hugh},
+ booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
+ editor = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
+ title = {Open Source Code Serving Endangered Languages},
+ year = {2016}
+}
 
-@article{Littauer2025NotornisLopdell,
-  Author    = {Richard Littauer},
-  Year      = {2025},
-  Volume    = {72},
-  Number    = {1},
-  Pages     = {49--50},
-  Journal   = {Notornis},
-  Title     = {A nomenclatural issue related to Lopdells’ penguin Archaeospheniscus lopdelli},
-  URL       = {https://doi.org/10.63172/777144pbjhsf},
-  DOI       = {10.63172/777144pbjhsf}
+@incollection{chiarcos2013building,
+ author = {Chiarcos, Christian and Moran, Steven and Mendes, Pablo N and Nordhoff, Sebastian and Littauer, Richard},
+ booktitle = {The People’s Web Meets NLP: Collaboratively Constructed Language Resources},
+ editor = {Iryna Gurevych and Jungi Kim},
+ pages = {315--348},
+ publisher = {Springer},
+ title = {Building a Linked Open Data cloud of linguistic resources: Motivations and developments},
+ year = {2013}
+}
+
+@incollection{Littauer2025Botw,
+ address = {Ithaca, NY},
+ author = {Richard Littauer},
+ booktitle = {Birds of the World},
+ doi = {10.2173/bow.trimoo2.02},
+ editor = {Guy M. Kirwan, Nicholas D. Sly},
+ publisher = {Cornell Lab of Ornithology},
+ title = {Tristan Moorhen (Gallinula nesiotis), version 2.0},
+ url = {https://doi.org/10.2173/bow.trimoo2.02},
+ year = {2025}
 }
 
 @article{Littauer2025NotornisKaroro,
-  Author    = {Richard Littauer},
-  Year      = {2025},
-  Volume    = {72},
-  Number    = {1},
-  Pages     = {50--53},
-  Journal   = {Notornis},
-  Title     = {First revision of karoro Larus dominicanus antipodum (Bruch, 1853)},
-  URL       = {https://doi.org/10.63172/093633lrrwbq},
-  DOI       = {10.63172/093633lrrwbq}
+ author = {Richard Littauer},
+ doi = {10.63172/093633lrrwbq},
+ journal = {Notornis},
+ number = {1},
+ pages = {50--53},
+ title = {First revision of karoro Larus dominicanus antipodum (Bruch, 1853)},
+ url = {https://doi.org/10.63172/093633lrrwbq},
+ volume = {72},
+ year = {2025}
 }
 
-@article{Littauer2025ZootaxaOphiodermatidae,
-  Author    = {Richard Littauer},
-  Year      = {2025},
-  Volume    = {5569},
-  Number    = {2},
-  Pages     = {400-400},
-  Journal   = {Zootaxa},
-  Title     = {Corrections for grammatical agreement in Ophiodermatidae},
-  URL       = {https://doi.org/10.11646/zootaxa.5569.2.11},
-  DOI       = {10.11646/zootaxa.5569.2.11}
-}
-
-@InCollection{Littauer2025Botw,
-  Author    = {Richard Littauer},
-  Year      = {2025},
-  Title     = {Tristan Moorhen (Gallinula nesiotis), version 2.0},
-  Editor    = {Guy M. Kirwan, Nicholas D. Sly},
-  Booktitle = {Birds of the World},
-  Publisher = {Cornell Lab of Ornithology},
-  Address   = {Ithaca, NY},
-  URL       = {https://doi.org/10.2173/bow.trimoo2.02},
-  DOI       = {10.2173/bow.trimoo2.02}
+@article{Littauer2025NotornisLopdell,
+ author = {Richard Littauer},
+ doi = {10.63172/777144pbjhsf},
+ journal = {Notornis},
+ number = {1},
+ pages = {49--50},
+ title = {A nomenclatural issue related to Lopdells’ penguin Archaeospheniscus lopdelli},
+ url = {https://doi.org/10.63172/777144pbjhsf},
+ volume = {72},
+ year = {2025}
 }
 
 @article{Littauer2025Weta,
-  Author    = {Richard Littauer},
-  Year      = {2025},
-  Volume    = {58},
-  Pages     = {55--57},
-  Journal   = {The Wētā},
-  Title     = {Audio observation of a Wellington Tree Wētā Hemideina crassidens defence stridulation},
-  URL       = {https://weta.ento.org.nz/index.php/weta/article/view/434},
-  Abstract  = {Wellington Tree Wētā Hemideina crassidens are known to produce a stridulating sound during defense (Field 1982). No papers that I could find have presented publicly available audio files which include this sound. Here, I describe one such call, and encourage others to upload their observations to community science websites.}
+ abstract = {Wellington Tree Wētā Hemideina crassidens are known to produce a stridulating sound during defense (Field 1982). No papers that I could find have presented publicly available audio files which include this sound. Here, I describe one such call, and encourage others to upload their observations to community science websites.},
+ author = {Richard Littauer},
+ journal = {The Wētā},
+ pages = {55--57},
+ title = {Audio observation of a Wellington Tree Wētā Hemideina crassidens defence stridulation},
+ url = {https://weta.ento.org.nz/index.php/weta/article/view/434},
+ volume = {58},
+ year = {2025}
 }
 
-@incollection{ChiarcosLOD,
-  Author    = {Christian Chiarcos and Steven Moran and Pablo N. Mendes and Sebastian Nordhoff and Richard Littauer},
-  Year      = {to appear},
-  Title     = {Building a Linked Open Data Cloud of Linguistic Resources: Motivations and Developments},
-  Editor    = {Iryna Gurevych and Jungi Kim},
-  Booktitle = {The People's Web Meets NLP: Collaboratively Constructed Language Resources},
-  Publisher = {Springer},
+@article{Littauer2025ZootaxaOphiodermatidae,
+ author = {Richard Littauer},
+ doi = {10.11646/zootaxa.5569.2.11},
+ journal = {Zootaxa},
+ number = {2},
+ pages = {400-400},
+ title = {Corrections for grammatical agreement in Ophiodermatidae},
+ url = {https://doi.org/10.11646/zootaxa.5569.2.11},
+ volume = {5569},
+ year = {2025}
 }
 
-@inproceedings{LittDH,
-	Author    = {Richard Littauer and James Winters and Sean G. Roberts and Hannah Little and Michael Pleyer and Bill Benzon},
-	Title     = {Academic Research in the Blogosphere: Adapting to New Risks and Opportunities on the Internet},
-	Booktitle = {Digital Humanities 2012 Conference Abstracts},
-  Editor    = {Jan Christoph Meister},
-  Pages     = {268-269},
-  Publisher = {Hamburg University Press},
-  Address   = {Hamburg},
-	Year      = {2012},
-  Month     = {July},
-  ISBN      = {978-3-937816-99-9},
+@unpublished{LittauerAFOBewicks,
+ address = {Plymouth, Massachusetts},
+ author = {Richard Littauer},
+ month = {October},
+ note = {Poster presented at the Centennial Meeting of the Association of Field Ornithologists},
+ title = {A Proposal for Renaming Bill Types of Bewick's Swans},
+ url = {https://burntfen.com/publications/LittauerAFOBewicks.pdf},
+ year = {2022}
 }
 
 @article{LittDebut,
-	Author    = {Richard Littauer},
-	Journal   = {Début: The Undergraduate Journal of Languages, Linguistics, and Area Studies},
-	Title     = {Replicating Oliphant's Saussurean Simulations},
-  Year      = {to appear},
-  Volume    = {3},
-  Number    = {1},
-  Editor    = {John Canning},
-  URL       = {http://www.llas.ac.uk/news/3088},
+ author = {Richard Littauer},
+ editor = {John Canning},
+ journal = {Début: The Undergraduate Journal of Languages, Linguistics, and Area Studies},
+ number = {1},
+ title = {Replicating Oliphant's Saussurean Simulations},
+ url = {http://www.llas.ac.uk/news/3088},
+ volume = {3},
+ year = {2012}
 }
 
-@InProceedings{LittEACL,
-  author    = {Richard Littauer and Rory Turnbull and Alexis Palmer},
-  title     = {Visualising Typological Relationships: Plotting WALS with Heat Maps},
-  booktitle = {Proceedings of the EACL 2012 Workshop on the Visualization of Linguistic Patterns},
-  month     = {April},
-  year      = {2012},
-  address   = {Avignon, France},
-  publisher = {Association for Computational Linguistics},
-  pages     = {4},
+@inproceedings{LittDH,
+ address = {Hamburg},
+ author = {Richard Littauer and James Winters and Sean G. Roberts and Hannah Little and Michael Pleyer and Bill Benzon},
+ booktitle = {Digital Humanities 2012 Conference Abstracts},
+ editor = {Jan Christoph Meister},
+ isbn = {978-3-937816-99-9},
+ month = {July},
+ pages = {268-269},
+ publisher = {Hamburg University Press},
+ title = {Academic Research in the Blogosphere: Adapting to New Risks and Opportunities on the Internet},
+ year = {2012}
 }
 
-@InProceedings{LittEdulearn,
-  author    = {Richard Littauer and Antonia Scheidel and Marc Schulder and Sibel Ciddi},
-  title     = {Crowd Sourcing the Classroom: Interactive Applications in Higher Learning},
-  booktitle = {Proceedings of the 4th International Conference on Education and New Learning Technologies (EDULEARN12)},
-  month     = {July},
-  year      = {2012},
-  pages     = {1473-1481},
-  publisher = {International Association of Technology, Education and Development (IATED)},
-  editor    = {L. G\'omez Chova, L. and I. Candel Torres and A. L\'opez Mart\'inez},
-  address   = {Barcelona, Spain},
-  ibsn      = {978-84-695-3491-5},
+@inproceedings{LittEACL,
+ address = {Avignon, France},
+ author = {Richard Littauer and Rory Turnbull and Alexis Palmer},
+ booktitle = {Proceedings of the EACL 2012 Workshop on the Visualization of Linguistic Patterns},
+ month = {April},
+ pages = {4},
+ publisher = {Association for Computational Linguistics},
+ title = {Visualising Typological Relationships: Plotting WALS with Heat Maps},
+ year = {2012}
+}
+
+@inproceedings{LittEdulearn,
+ address = {Barcelona, Spain},
+ author = {Richard Littauer and Antonia Scheidel and Marc Schulder and Sibel Ciddi},
+ booktitle = {Proceedings of the 4th International Conference on Education and New Learning Technologies (EDULEARN12)},
+ editor = {L. G\'omez Chova, L. and I. Candel Torres and A. L\'opez Mart\'inez},
+ ibsn = {978-84-695-3491-5},
+ month = {July},
+ pages = {1473-1481},
+ publisher = {International Association of Technology, Education and Development (IATED)},
+ title = {Crowd Sourcing the Classroom: Interactive Applications in Higher Learning},
+ year = {2012}
 }
 
 @inproceedings{LittEssex,
-	Address   = {Essex, UK},
-	Author    = {Richard Littauer},
-	Booktitle = {Language at the University of Essex (LangUE) 2011 Proceedings},
-	Organization = {Department of Language and Linguistics, University of Essex},
-	Title     = {A Reanalysis of Anatomical Changes for Language},
-	Year      = {2012},
+ address = {Essex, UK},
+ author = {Richard Littauer},
+ booktitle = {Language at the University of Essex (LangUE) 2011 Proceedings},
+ organization = {Department of Language and Linguistics, University of Essex},
+ title = {A Reanalysis of Anatomical Changes for Language},
+ year = {2012}
 }
 
 @inproceedings{LittEvoA,
-	Author    = {Richard Littauer},
-	Title     = {The Evolution of Morphological Agreement},
-	Booktitle = {The Evolution of Language: Proceedings of the 9th International Conference (EVOLANG9)},
-  Editor    = {Scott-Phillips, T.C. and Tamariz, M. and Cartmill, E.A. and Hurford, J.R.},
-  Pages     = {484-485},
-  Publisher = {World Scientific},
-  Address   = {Singapore},
-	Year      = {2012},
+ address = {Singapore},
+ author = {Richard Littauer},
+ booktitle = {The Evolution of Language: Proceedings of the 9th International Conference (EVOLANG9)},
+ editor = {Scott-Phillips, T.C. and Tamariz, M. and Cartmill, E.A. and Hurford, J.R.},
+ pages = {484-485},
+ publisher = {World Scientific},
+ title = {The Evolution of Morphological Agreement},
+ year = {2012}
 }
 
 @inproceedings{LittEvoB,
-	Author    = {Richard Littauer},
-	Title     = {Re-dating the Loss of Laryngeal Air Sacs in Homo Sapiens},
-	Booktitle = {The Evolution of Language: Proceedings of the 9th International Conference (EVOLANG9)},
-  Editor    = {Scott-Phillips, T.C. and Tamariz, M. and Cartmill, E.A. and Hurford, J.R.},
-  Pages     = {486-487},
-  Publisher = {World Scientific},
-  Address   = {Singapore},
-	Year      = {2012}
+ address = {Singapore},
+ author = {Richard Littauer},
+ booktitle = {The Evolution of Language: Proceedings of the 9th International Conference (EVOLANG9)},
+ editor = {Scott-Phillips, T.C. and Tamariz, M. and Cartmill, E.A. and Hurford, J.R.},
+ pages = {486-487},
+ publisher = {World Scientific},
+ title = {Re-dating the Loss of Laryngeal Air Sacs in Homo Sapiens},
+ year = {2012}
 }
 
 @inproceedings{LittEvoC,
-	Author    = {Richard Littauer, Sean G. Roberts, James Winters, Rachael Bailes, Michael Pleyer, Hannah Little},
-	Title     = {From the Savannah to the Cloud: Blogging Evolutionary Linguistics Research},
-	Booktitle = {The Past, Present and Future of Language Evolution Research: Student Volume of the 9th International Conference on the Evolution of Language},
-  Editor    = {McCrohon, L. and Thompson, B. and Verhoef, T. and Yamauchi, H.},
-  Pages     = {121-132},
-  Publisher = {Evolang 9 Organizing Committee},
-  Address   = {Tokyo, Japan},
-	Year      = {2014},
-  URL       = {http://kyoto.evolang.org/sites/default/files/student_volume.pdf},
+ address = {Tokyo, Japan},
+ author = {Richard Littauer, Sean G. Roberts, James Winters, Rachael Bailes, Michael Pleyer, Hannah Little},
+ booktitle = {The Past, Present and Future of Language Evolution Research: Student Volume of the 9th International Conference on the Evolution of Language},
+ editor = {McCrohon, L. and Thompson, B. and Verhoef, T. and Yamauchi, H.},
+ pages = {121-132},
+ publisher = {Evolang 9 Organizing Committee},
+ title = {From the Savannah to the Cloud: Blogging Evolutionary Linguistics Research},
+ url = {http://kyoto.evolang.org/sites/default/files/student_volume.pdf},
+ year = {2014}
 }
 
 @inproceedings{LittIDCC,
-	Abstract  = {Scientific workflows are typically used to automate the processing, analysis, and management of scientific data. Most scientific workflow programs provide a user-friendly graphical user interface that enables scientists to more easily create and visualize complex workflows that may be comprised of dozens of processing and analytical steps. Furthermore, many workflows provide mechanisms for tracing provenance and methodologies that foster reproducible science. Despite their potential for enabling science, few studies have examined how the process of creating, executing, and sharing workflows can be improved. In order to promote open discourse and access to scientific methods as well as data, we analyzed a wide variety of workflow systems and publicly-available workflows on the public repository myExperiment. It is hoped that understanding the usage of workflows and developing a set of recommended best practices will lead to increased contribution of workflows to the public domain.},
-	Author    = {Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca Koskela},
-	Journal   = {7th International Digital Curation Conference Proceedings},
-	Month     = {December},
-	Title     = {Trends in Use of Scientific Workflows: Insights from a Public Repository and Guidelines for Best Practices.},
-	Year      = {2011}
+ abstract = {Scientific workflows are typically used to automate the processing, analysis, and management of scientific data. Most scientific workflow programs provide a user-friendly graphical user interface that enables scientists to more easily create and visualize complex workflows that may be comprised of dozens of processing and analytical steps. Furthermore, many workflows provide mechanisms for tracing provenance and methodologies that foster reproducible science. Despite their potential for enabling science, few studies have examined how the process of creating, executing, and sharing workflows can be improved. In order to promote open discourse and access to scientific methods as well as data, we analyzed a wide variety of workflow systems and publicly-available workflows on the public repository myExperiment. It is hoped that understanding the usage of workflows and developing a set of recommended best practices will lead to increased contribution of workflows to the public domain.},
+ author = {Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca Koskela},
+ journal = {7th International Digital Curation Conference Proceedings},
+ month = {December},
+ title = {Trends in Use of Scientific Workflows: Insights from a Public Repository and Guidelines for Best Practices.},
+ year = {2011}
 }
 
 @article{LittIJDC,
-	Author    = {Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca Koskela},
-	Journal   = {International Journal of Data Curation},
-	Title     = {Trends in Use of Scientific Workflows: Insights from a Public Repository and Guidelines for Best Practices.},
-  Year      = {2012},
-  Volume    = {7},
-  Number    = {2},
-  Pages     = {92-100},
-  Abstract  = {Scientific workflows are typically used to automate the processing, analysis and management of scientific data. Most scientific workflow programs provide a user-friendly graphical user interface that enables scientists to more easily create and visualize complex workflows that may be comprised of dozens of processing and analytical steps. Furthermore, many workflows provide mechanisms for tracing provenance and methodologies that foster reproducible science. Despite their potential for enabling science, few studies have examined how the process of creating, executing, and sharing workflows can be improved. In order to promote open discourse and access to scientific methods as well as data, we analyzed a wide variety of workflow systems and publicly available workflows on the public repository myExperiment. It is hoped that understanding the usage of workflows and developing a set of recommended best practices will lead to increased contribution of workflows to the public domain.},
-  ISSN      = {1746-8256},
-  doi       = {doi:10.2218/ijdc.v7i2.232},
-  url       = {http://ijdc.net/index.php/ijdc/article/view/222}
+ abstract = {Scientific workflows are typically used to automate the processing, analysis and management of scientific data. Most scientific workflow programs provide a user-friendly graphical user interface that enables scientists to more easily create and visualize complex workflows that may be comprised of dozens of processing and analytical steps. Furthermore, many workflows provide mechanisms for tracing provenance and methodologies that foster reproducible science. Despite their potential for enabling science, few studies have examined how the process of creating, executing, and sharing workflows can be improved. In order to promote open discourse and access to scientific methods as well as data, we analyzed a wide variety of workflow systems and publicly available workflows on the public repository myExperiment. It is hoped that understanding the usage of workflows and developing a set of recommended best practices will lead to increased contribution of workflows to the public domain.},
+ author = {Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca Koskela},
+ doi = {doi:10.2218/ijdc.v7i2.232},
+ issn = {1746-8256},
+ journal = {International Journal of Data Curation},
+ number = {2},
+ pages = {92-100},
+ title = {Trends in Use of Scientific Workflows: Insights from a Public Repository and Guidelines for Best Practices.},
+ url = {http://ijdc.net/index.php/ijdc/article/view/222},
+ volume = {7},
+ year = {2012}
 }
 
 @inproceedings{LittLDL,
-	Author    = {Richard Littauer, Boris Villazon-Terrazas, Steven Moran},
-	Title     = {Linguistic Resources Enhanced with Geospatial Information},
-	Booktitle = {Proceedings of the 2nd Workshop on Linked Data in Linguistics (LDL-2013): Representing and linking lexicons, terminologies and other language data},
-  Editor    = {Chiarcos, C. and Cimiano, P. and Declerck, T. and McCrae, J.P.},
-  Pages     = {53-58},
-  Publisher = {Association for Computational Linguistics},
-  Address   = {Pisa, Italy},
-	Year      = {2013},
-  URL       = {https://aclanthology.org/W13-5508/},
+ address = {Pisa, Italy},
+ author = {Richard Littauer, Boris Villazon-Terrazas, Steven Moran},
+ booktitle = {Proceedings of the 2nd Workshop on Linked Data in Linguistics (LDL-2013): Representing and linking lexicons, terminologies and other language data},
+ editor = {Chiarcos, C. and Cimiano, P. and Declerck, T. and McCrae, J.P.},
+ pages = {53-58},
+ publisher = {Association for Computational Linguistics},
+ title = {Linguistic Resources Enhanced with Geospatial Information},
+ url = {https://aclanthology.org/W13-5508/},
+ year = {2013}
 }
 
-@article{LittLinguist,
-  Author    = {Richard Littauer},
-  Title     = {Review of Harold F. Shiffman and Brian Spooner (Eds.), (2011). Language Policy and Language Conflict in Afghanistan and Its Neighbors. In: Brill's Studies in South and Southwest Asian Languages. Leiden: Brill.},
-  Journal = {LINGUIST List},
-  Year      = {2012},
-  Volume    = {23.3813},
-  URL       = {http://linguistlist.org/pubs/reviews/get-review.cfm?SubID=4553348},
+@article{LittLinguist2012,
+ author = {Richard Littauer},
+ journal = {LINGUIST List},
+ title = {Review of Harold F. Shiffman and Brian Spooner (Eds.), (2011). Language Policy and Language Conflict in Afghanistan and Its Neighbors. In: Brill's Studies in South and Southwest Asian Languages. Leiden: Brill.},
+ url = {http://linguistlist.org/pubs/reviews/get-review.cfm?SubID=4553348},
+ volume = {23.3813},
+ year = {2012}
 }
 
 @article{LittLinguist2013,
-  Author    = {Richard Littauer},
-  Title     = {Review of F. Seifart, G. Haig, N. Himmelmann, D. Jung, A. Margetts, & P. Trilsbeek, eds., Potentials of Language Documentation: Methods, Analyses, and Utilization. In: Language Documentation & Conservation Special Publication No. 3. Online: University of Hawai'i Press.},
-  Journal = {LINGUIST List},
-  Year      = {2013},
-  Volume    = {24.2604},
-  URL       = {http://linguistlist.org/pubs/reviews/get-review.cfm?SubID=12670360},}
-
-@InProceedings{LittULAB,
-  author       = {Richard Littauer},
-  title        = {On Tocharian Exceptionality to the centum-satem Isogloss},
-  booktitle    = {Undergraduate Linguistics Association of Britain 2012 Proceedings},
-  editor       = {Caitlin Wilson},
-  address      = {Bristol, UK},
-  year         = 2022,
-  month        = {August},
-  doi          = {10.5281/zenodo.6969559},
-  url          = {https://doi.org/10.5281/zenodo.6969559},
-  abstract     = {I argue that there may have been pressures inhibiting phonological change in Tocharian, particularly in relation to the centum/satem Indo-European split. Firstly, if the overall complexity of language strata may change over time (Sampson, 2009), syntactic, morphological, and lexical changes may have inhibited a change in the phonemic inventory of the language. Secondly, I examine the historical evidence for other languages in historical Central Asia in order to show that contact languages may have also horizontally influenced the centum nature of Tocharian. Thirdly, I posit that the merge of the PIE dorsal consonants may have been influenced by the decline in the general use, domain and range of Tocharian, which would be in line with recent research correlating small phonemic inventories with small language communities (Hay \& Bauer, 2007). Tocharian therefore may not have been susceptible to a weak dialect wave, or to a possible early branching of IE. This paper takes a new perspective on the history and development of Tocharian, and in turn on the nature of the ‘textbook’ isogloss example.}
+ author = {Richard Littauer},
+ journal = {LINGUIST List},
+ title = {Review of F. Seifart, G. Haig, N. Himmelmann, D. Jung, A. Margetts, & P. Trilsbeek, eds., Potentials of Language Documentation: Methods, Analyses, and Utilization. In: Language Documentation & Conservation Special Publication No. 3. Online: University of Hawai'i Press.},
+ url = {http://linguistlist.org/pubs/reviews/get-review.cfm?SubID=12670360},
+ volume = {24.2604},
+ year = {2013}
 }
 
-@InProceedings{OKFLREC,
-  author = {Christian Chiarcos and Sebastian Hellmann and Sebastian Nordhoff and Steven Moran and Richard Littauer and Judith Eckle-Kohler and Iryna Gurevych and Silvana Hartmann and Michael Matuschek and Christian M. Meyer},
-  title = {The Open Linguistics Working Group},
-  booktitle = {Proceedings of the Eight International Conference on Language Resources and Evaluation (LREC'12)},
-  year = {2012},
-  month = {may},
-  date = {23-25},
-  address = {Istanbul, Turkey},
-  editor = {Nicoletta Calzolari (Conference Chair) and Khalid Choukri and Thierry Declerck and Mehmet Uğur Doğan and Bente Maegaard and Joseph Mariani and Jan Odijk and Stelios Piperidis},
-  publisher = {European Language Resources Association (ELRA)},
-  isbn = {978-2-9517408-7-7},
-  language = {english}
- }
-
-@article{wssspe2,
-  author    = {Daniel S. Katz and
-               Sou{-}Cheng T. Choi and
-               Nancy Wilkins{-}Diehr and
-               Neil Chue Hong and
-               Colin C. Venters and
-               James Howison and
-               Frank J. Seinstra and
-               Matthew Jones and
-               Karen Cranston and
-               Thomas L. Clune and
-               Miguel de Val{-}Borro and
-               Richard Littauer},
-  title     = {Report on the Second Workshop on Sustainable Software for Science:
-               Practice and Experiences {(WSSSPE2)}},
-  journal   = {CoRR},
-  volume    = {abs/1507.01715},
-  year      = {2015},
-  url       = {http://arxiv.org/abs/1507.01715},
-  timestamp = {Sun, 02 Aug 2015 18:42:02 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/KatzCWHVHSJCCVL15},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+@inproceedings{LittULAB,
+ abstract = {I argue that there may have been pressures inhibiting phonological change in Tocharian, particularly in relation to the centum/satem Indo-European split. Firstly, if the overall complexity of language strata may change over time (Sampson, 2009), syntactic, morphological, and lexical changes may have inhibited a change in the phonemic inventory of the language. Secondly, I examine the historical evidence for other languages in historical Central Asia in order to show that contact languages may have also horizontally influenced the centum nature of Tocharian. Thirdly, I posit that the merge of the PIE dorsal consonants may have been influenced by the decline in the general use, domain and range of Tocharian, which would be in line with recent research correlating small phonemic inventories with small language communities (Hay \& Bauer, 2007). Tocharian therefore may not have been susceptible to a weak dialect wave, or to a possible early branching of IE. This paper takes a new perspective on the history and development of Tocharian, and in turn on the nature of the ‘textbook’ isogloss example.},
+ address = {Bristol, UK},
+ author = {Richard Littauer},
+ booktitle = {Undergraduate Linguistics Association of Britain 2012 Proceedings},
+ doi = {10.5281/zenodo.6969559},
+ editor = {Caitlin Wilson},
+ month = {August},
+ title = {On Tocharian Exceptionality to the centum-satem Isogloss},
+ url = {https://doi.org/10.5281/zenodo.6969559},
+ year = {2022}
 }
 
-@inproceedings{CCURL,
-	Author    = {Littauer, Richard and Paterson III, Hugh},
-	Title     = {Open Source Code Serving Endangered Languages},
-	Booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
-  Editor    = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
-  Address   = {Portoro\v{z}, Slovenia},
-	Year      = {2016}
+@inproceedings{OKFLREC,
+ address = {Istanbul, Turkey},
+ author = {Christian Chiarcos and Sebastian Hellmann and Sebastian Nordhoff and Steven Moran and Richard Littauer and Judith Eckle-Kohler and Iryna Gurevych and Silvana Hartmann and Michael Matuschek and Christian M. Meyer},
+ booktitle = {Proceedings of the Eight International Conference on Language Resources and Evaluation (LREC'12)},
+ date = {23-25},
+ editor = {Nicoletta Calzolari (Conference Chair) and Khalid Choukri and Thierry Declerck and Mehmet Uğur Doğan and Bente Maegaard and Joseph Mariani and Jan Odijk and Stelios Piperidis},
+ isbn = {978-2-9517408-7-7},
+ language = {english},
+ month = {may},
+ publisher = {European Language Resources Association (ELRA)},
+ title = {The Open Linguistics Working Group},
+ year = {2012}
 }
+
+@article{WSSSPE2,
+ author = {Daniel S. Katz and
+Sou{-}Cheng T. Choi and
+Nancy Wilkins{-}Diehr and
+Neil Chue Hong and
+Colin C. Venters and
+James Howison and
+Frank J. Seinstra and
+Matthew Jones and
+Karen Cranston and
+Thomas L. Clune and
+Miguel de Val{-}Borro and
+Richard Littauer},
+ bibsource = {dblp computer science bibliography, http://dblp.org},
+ biburl = {http://dblp.uni-trier.de/rec/bib/journals/corr/KatzCWHVHSJCCVL15},
+ journal = {CoRR},
+ timestamp = {Sun, 02 Aug 2015 18:42:02 +0200},
+ title = {Report on the Second Workshop on Sustainable Software for Science:
+Practice and Experiences {(WSSSPE2)}},
+ url = {http://arxiv.org/abs/1507.01715},
+ volume = {abs/1507.01715},
+ year = {2015}
+}
+
