--- a/publications/bib/wssspe2.bib
+++ b/publications/bib/wssspe2.bib
@@ -1,4 +1,4 @@
-@article{DBLP:journals/corr/KatzCWHVHSJCCVL15,
+@article{WSSSPE2,
   author    = {Daniel S. Katz and
                Sou{-}Cheng T. Choi and
                Nancy Wilkins{-}Diehr and
