--- a/publications/bib/Littauer2025NotornisKaroro.bib
+++ b/publications/bib/Littauer2025NotornisKaroro.bib
@@ -5,7 +5,7 @@
   Number    = {1},
   Pages     = {50--53},
   Journal   = {Notornis},
-  Title     = {First revision of karoro Larus dominicanus antipodum (Bruch, 1853)},
+  Title     = {First revision of karoro \textit{{Larus} dominicanus antipodum} ({Bruch}, 1853)},
   URL       = {https://doi.org/10.63172/093633lrrwbq},
   DOI       = {10.63172/093633lrrwbq}
 }
