--- a/publications/bib/Littauer2025NotornisLopdell.bib
+++ b/publications/bib/Littauer2025NotornisLopdell.bib
@@ -5,7 +5,7 @@
   Number    = {1},
   Pages     = {49--50},
   Journal   = {Notornis},
-  Title     = {A nomenclatural issue related to Lopdells’ penguin Archaeospheniscus lopdelli},
+  Title     = {A nomenclatural issue related to {Lopdells}’ penguin \textit{{Archaeospheniscus} lopdelli}},
   URL       = {https://doi.org/10.63172/777144pbjhsf},
   DOI       = {10.63172/777144pbjhsf}
 }
