Adding Bewicks Swan paper

--- a/publications/bib/publications.bib
+++ b/publications/bib/publications.bib
@@ -17,6 +17,20 @@
  year = {2013}
 }
 
+@article{Littauer2025Bewicks,
+ author = {Richard Littauer},
+ doi = {10.1080/15594491.2025.2498780},
+ eprint = {https://doi.org/10.1080/15594491.2025.2498780},
+ journal = {The Wilson Journal of Ornithology},
+ number = {0},
+ pages = {1--3},
+ publisher = {Taylor \& Francis},
+ title = {Renaming a bill type for {Tundra Swan} ({C}ygnus columbianus)},
+ url = {https://doi.org/10.1080/15594491.2025.2498780},
+ volume = {0},
+ year = {2025}
+}
+
 @incollection{Littauer2025Botw,
  address = {Ithaca, NY},
  author = {Richard Littauer},
@@ -35,7 +49,7 @@
  journal = {Notornis},
  number = {1},
  pages = {50--53},
- title = {First revision of karoro Larus dominicanus antipodum (Bruch, 1853)},
+ title = {First revision of karoro \textit{{Larus} dominicanus antipodum} ({Bruch}, 1853)},
  url = {https://doi.org/10.63172/093633lrrwbq},
  volume = {72},
  year = {2025}
@@ -47,7 +61,7 @@
  journal = {Notornis},
  number = {1},
  pages = {49--50},
- title = {A nomenclatural issue related to Lopdells’ penguin Archaeospheniscus lopdelli},
+ title = {A nomenclatural issue related to {Lopdells}’ penguin \textit{{Archaeospheniscus} lopdelli}},
  url = {https://doi.org/10.63172/777144pbjhsf},
  volume = {72},
  year = {2025}
