--- a/publications/bib/publications.bib
+++ b/publications/bib/publications.bib
@@ -21,7 +21,7 @@
  author = {Richard Littauer},
  doi = {10.1080/15594491.2025.2498780},
  eprint = {https://doi.org/10.1080/15594491.2025.2498780},
- journal = {The Wilson Journal of Ornithology},
+ journal = {The {Wilson} Journal of Ornithology},
  number = {0},
  pages = {1--3},
  publisher = {Taylor \& Francis},
@@ -75,6 +75,18 @@
  title = {Audio observation of a Wellington Tree Wētā Hemideina crassidens defence stridulation},
  url = {https://weta.ento.org.nz/index.php/weta/article/view/434},
  volume = {58},
+ year = {2025}
+}
+
+@article{Littauer2025ZootaxaHelobdella,
+ author = {Richard Littauer},
+ doi = {10.11646/zootaxa.5673.4.8},
+ journal = {Zootaxa},
+ number = {4},
+ pages = {598–598},
+ title = {Helobdella serendipitous Saglam et al., 2018 is the available name (Annelida: Hirudinida)},
+ url = {https://doi.org/10.11646/zootaxa.5673.4.8},
+ volume = {5673},
  year = {2025}
 }
 
